<resources>
    <string name="app_name">GurukoolMax_V3</string>
    <string name="okay">OKAY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="welcome_to">Welcome to</string>
    <string name="school_code">School Code</string>
    <string name="change">Change</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="create_now">Create Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="request_for_password">Request for Password</string>
    <string name="hello_there">Hello</string>
    <string name="slider_one_desc_text">Don’t let what you cannot do interfere with what you can do.” – John Wooden</string>
    <string name="slider_two_desc">Failure is the opportunity to begin again more intelligently.” – Henry Ford</string>
    <string name="slide_3_title">Learn How to Learn</string>
    <string name="slide_3_desc">Education is the key to unlocking the world, a passport to freedom</string>
    <string name="slide_4_title">Power</string>
    <string name="slide_4_desc">Education is the most powerful weapon which you can use to change the world</string>
    <string name="gurukool_max_management">GurukoolMax - Management</string>
    <string name="gurukool_max_operations">GurukoolMax - Operations</string>
    <string name="gurukool_max_administrator">GurukoolMax - Administrator</string>
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="image_resource">Image resource that is either clickable or represents some sort of visuals</string>
    <string name="school_under_institution">Does your School belong to a Group of Institution</string>
    <string name="group_name">Group Name</string>
    <string name="school_name">School Name</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="license_key">License Key</string>
    <string name="principal_name">Principal Name</string>
    <string name="principal_number">Principal Phone Number</string>
    <string name="principal_mail">Principal Mail</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_gurukool_max_ecosystem">Welcome to GurukoolMax \nEcosystem Solutions</string>
    <string name="please_provide_school_code">Please provide your School Code</string>
    <string name="agree_with_terms">I agree with the terms of usage</string>
    <string name="register_school">Register School</string>
    <string name="enter_school_empty">Enter School Code</string>
    <string name="agree_to_terms_conditions">Agree to the terms and conditions</string>
    <string name="fleet_menu">Fleet Menu</string>
    <string name="tracker_updates">Tracker Updates</string>
    <string name="home">Home</string>
    <string name="route_name">ROUTE NAME:</string>
    <string name="stop_name">BUS STOP:</string>
    <string name="arrival_time">ARRIVAL TIME:</string>
    <string name="effective_date">EFFECTIVE DATES:</string>
    <string name="status">STATUS</string>
    <string name="fleet_options">Fleet Options</string>
    <string name="fleet_gps">Fleet GPS</string>
    <string name="fleet_information">Fleet Information</string>
    <string name="fleet_operations">Fleet Operations</string>
    <string name="bus_routes">Bus Routes</string>
    <string name="bus_stops">Bus Stops</string>
    <string name="pickup_schedule">Pickup Schedule</string>
    <string name="on_board_attendance">On-Board Attendance</string>
    <string name="fab_button">Button to add new item</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="vin_number">Vin Number</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="model_number">Model Number</string>
    <string name="make">Make</string>
    <string name="manufacture_year">Manufacture Year</string>
    <string name="choose_an_option">Choose an Option</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="color">Color</string>
    <string name="cubic_capacity">Cubic Capacity</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="registration_authority">Registration Authority</string>
    <string name="bus_photo">Bus Photo</string>
    <string name="register_fleet">Register Fleet</string>
    <string name="registered_fleet">Registered Fleet</string>
    <string name="fleet_movement">Fleet Movement</string>
    <string name="date_of_record">Date of Record</string>
    <string name="opening_reading">Opening Reading</string>
    <string name="closing_reading">Closing Reading</string>
    <string name="trip_reading">Trip Reading</string>
    <string name="fleet_number">Fleet Number</string>
    <string name="fuel_coupon_number">Fuel Coupon Number</string>
    <string name="fuel_liters">Fuel Liters</string>
    <string name="amount">Amount</string>
    <string name="remarks">Remarks</string>
    <string name="fleet_fuel_log">Fleet Fuel Log</string>
    <string name="odometer">Odometer</string>
    <string name="gallons">Gallons</string>
    <string name="total_cost">Total cost</string>
    <string name="provider_name">Provider Name</string>
    <string name="model">Model</string>
    <string name="edit">Edit</string>
    <string name="details_required">Details Required</string>
    <string name="details_required_desc">Cannot leave fields empty</string>
    <string name="duplicate_info">Duplicate Info</string>
    <string name="duplicate_info_desc">The details already exist. Please check and re-enter info</string>
    <string name="could_not_save_info">Could not Save Info</string>
    <string name="could_not_save_info_desc">Something went wrong, Could not save the details provided. Please try again.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_desc">Could not retrieve details</string>
    <string name="connection_error">Something Went wrong</string>
    <string name="connection_error_desc">We have trouble connecting</string>
    <string name="could_not_save_image">Could not save Image</string>
    <string name="could_not_save_image_desc">Could not save Image. Please Try again</string>
    <string name="invalid_code_scanned">Invalid code scanned</string>
    <string name="invalid_code_scanned_desc">The barcode scanned is not valid. Please scan a valid code</string>
    <string name="invalid_code_scanned_admission_desc">The Admission number is not valid. Please provide a valid Admission number</string>
    <string name="invalid_student_attendance">Invalid Student code scanned</string>
    <string name="invalid_student_attendance_desc">The barcode scanned is not tagged to this Route</string>
    <string name="invalid_student_attendance_admission">Invalid Student Admission Number</string>
    <string name="invalid_student_attendance_admission_desc">The Admission number is not tagged to this Route</string>
    <string name="duplicate_student_attendance">Student barcode already scanned</string>
    <string name="duplicate_student_attendance_desc">Student barcode has already been scanned</string>
    <string name="duplicate_student_attendance_admission">Student Admission number already recorded</string>
    <string name="duplicate_student_attendance_admission_desc">The Admission number provided has already been recorded</string>
    <string name="route">Fleet Route</string>
    <string name="select_bus_route">Select Bus Route</string>
    <string name="select_bus_route_desc">Select a bus route to register student fleet attendance</string>
    <string name="on_board_attendance_initiation">OnBoard Attendance Initiation</string>
    <string name="site_code_error">Site Code Error</string>
    <string name="site_code_error_desc">Site code does not exist. Please check and re-enter the information again</string>
    <string name="folder">Folder</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="done">DONE</string>
    <string name="range_is_not_valid">Closing range is not valid</string>
    <string name="range_is_not_valid_desc">Closing range must be greater than opening range</string>
    <string name="enter_credentials">Enter Credentials</string>
    <string name="enter_credentials_desc">Provide Username and Password to Proceed</string>
    <string name="invlaid_credentials">Invalid Credentials</string>
    <string name="invlaid_credentials_desc">Recheck the Username and Password provided</string>
    <string name="admission_number">Admission Number</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="not_application">N/A</string>
    <string name="feature_coming_soon">This Feature is Coming soon</string>
    <string name="feature_coming_soon_desc"></string>
    <string name="under_process">Under Process</string>
    <string name="under_process_desc">This feature is under process and will be available in the coming builds</string>
    <string name="specify_route_name">Specify Route Name</string>
    <string name="enter_all_info">Enter all Info</string>
    <string name="enter_all_info_desc">Cannot leave the fields empty</string>
    <string name="choose_the_route">Choose the Route</string>
    <string name="specify_pickup_point">Specify the Pickup point</string>
    <string name="pickup_point">Pickup point</string>
    <string name="arrival_time_at_this_destination">Arrival Time at this destination</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="am_pm">AM/PM</string>
    <string name="effective_start_date">Effective Start Date</string>
    <string name="class_standard">Class Standard</string>
    <string name="subject">Subject</string>
    <string name="academic_year">Academic Year</string>
    <string name="academics_board">Academic Board</string>
    <string name="class_of_study">Class of Study</string>
    <string name="project_name">Project Name</string>
    <string name="technology_involved">Technology Involved</string>
    <string name="who_suggested_project">Who suggested the Project</string>
    <string name="agency_name">Agency Name</string>
    <string name="abstract_project">Abstract of the Project (would be displayed in the search results)</string>
    <string name="abstract_project_condensed">Abstract of the Project</string>
    <string name="description_project">Description of the Project</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="recommended_title">Recommended Title</string>
    <string name="content_type">Content Type</string>
    <string name="abstract_of_submission">Abstract of the Submission</string>
    <string name="submission_category">Submission Category</string>
    <string name="submission_format">Submission Format</string>
    <string name="tagged_keywords">Tagged Keywords</string>
    <string name="comments">Comments</string>
    <string name="comments_desc">Post Your Comments (Will not be published)</string>
    <string name="attach_the_learning_materials">Attach the learning materials(if any)</string>
    <string name="examination_schedule">Examination Schedules</string>
    <string name="exam_date">Exam Date</string>
    <string name="focus_assignment_category">Focus/Assignment Category</string>
    <string name="marks_allocated">Marks/Credits Allocated</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="exam_details">Exam Details</string>
    <string name="no_files_chosen">No files chosen</string>
</resources>