<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".academics.ui.km.KMPostRepositoryInfoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar" />

            <LinearLayout style="@style/ParentLinearLayoutForInputForm">

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:layout_marginTop="16.7dp"
                    android:text="@string/academics_board" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboBoard"
                        style="@style/TextViewSpinner"
                        android:text="@string/choose_an_option" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/class_of_study" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboClass"
                        style="@style/TextViewSpinner"
                        android:text="@string/choose_an_option" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/subject" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboSubject"
                        style="@style/TextViewSpinner"
                        android:text="@string/choose_an_option" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/recommended_title" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <EditText
                        android:id="@+id/txtRecommendedTitle"
                        style="@style/EditTextInputFormInputTypeText"
                        android:hint="@string/recommended_title"
                        android:importantForAutofill="no"
                        android:maxLength="2" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/content_type" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboContentType"
                        style="@style/TextViewSpinner"
                        android:text="@string/choose_an_option" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/abstract_of_submission" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <EditText
                        android:id="@+id/txtAbstractOfSubmission"
                        style="@style/EditTextInputFormInputTypeText"
                        android:hint="@string/abstract_of_submission"
                        android:importantForAutofill="no"
                        android:maxLength="2" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/submission_category" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboSubmissionCategory"
                        style="@style/TextViewSpinner"
                        android:text="@string/choose_an_option" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/submission_format" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboSubmissionFormat"
                        style="@style/TextViewSpinner"
                        android:text="@string/choose_an_option" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/tagged_keywords" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <EditText
                        android:id="@+id/txtTaggedKeywords"
                        style="@style/EditTextInputFormInputTypeText"
                        android:hint="@string/tagged_keywords"
                        android:importantForAutofill="no"
                        android:maxLength="2" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/comments_desc" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <EditText
                        android:id="@+id/txtComments"
                        style="@style/EditTextInputFormInputTypeText"
                        android:hint="@string/comments"
                        android:importantForAutofill="no"
                        android:maxLength="2" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/attach_the_learning_materials" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/lblChooseFile"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:drawablePadding="5dp"
                        app:drawableStartCompat="@drawable/ic_baseline_attach_file_24"
                        android:text="@string/no_files_chosen"
                        android:textSize="16sp" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/InputFormButton" />

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
