<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".academics.ui.examination.ExaminationSetupInfoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar" />

            <LinearLayout style="@style/ParentLinearLayoutForInputForm">

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:layout_marginTop="16.7dp"
                    android:text="@string/academics_board" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboBoard"
                        style="@style/TextViewSpinner" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/class_standard" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboClass"
                        style="@style/TextViewSpinner" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/academic_year" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboAcademicYear"
                        style="@style/TextViewSpinner" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/examination_schedule" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboExaminationSchedule"
                        style="@style/TextViewSpinner" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/exam_date" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/lblExamDate"
                        style="@style/TextViewDateSelect"
                        android:hint="@string/exam_date" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/subject" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboSubject"
                        style="@style/TextViewSpinner" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/focus_assignment_category" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/cboFocusAssignment"
                        style="@style/TextViewSpinner" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/marks_allocated" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <EditText
                        android:id="@+id/txtMarksAllocated"
                        style="@style/EditTextInputFormInputTypeText"
                        android:hint="@string/marks_allocated"
                        android:importantForAutofill="no"
                        android:maxLength="3" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/start_time" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/lblStartTime"
                        style="@style/TextViewTimeSelect"
                        android:hint="@string/start_time" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/end_time" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <TextView
                        android:id="@+id/lblEndTime"
                        style="@style/TextViewTimeSelect"
                        android:hint="@string/end_time" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/exam_details" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <EditText
                        android:id="@+id/txtExamDetails"
                        style="@style/EditTextInputFormInputTypeText"
                        android:hint="@string/exam_details"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewLabelForEditText"
                    android:text="@string/comments" />

                <LinearLayout style="@style/LinearLayoutForEditText">

                    <EditText
                        android:id="@+id/txtComments"
                        style="@style/EditTextInputFormInputTypeText"
                        android:hint="@string/comments"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/InputFormButton" />

            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>
